Fix double scrollbars (#450)

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,3 +18,7 @@
 .table-col-m {
   width: 20rem;
 }
+
+html {
+  background-color: rgb(243 244 246);
+}
